# mapatas

./: .gitignore  README.md  justfile  pyproject.toml
src/mapatas/: _version.py  main.py
